# RMS

./: .dockerignore  .env.example  .env.railway  .gitignore  Dockerfile  QUICKSTART_TESTS.md  RAILWAY_DEPLOYMENT.md  README.md  TESTING.md  TEST_SUMMARY.md
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_earnings_guidance.py  003_add_theme_type.py  ff8c8b068c7d_add_folder_notes.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/endpoints/: attachments.py  auth.py  earnings.py  folders.py  guidance.py  ideas.py  notes.py  prices.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  attachment.py  earnings.py  folder.py  guidance.py  idea.py  note.py  price_snapshot.py  user.py
backend/app/schemas/: __init__.py  attachment.py  auth.py  earnings.py  folder.py  guidance.py  idea.py  note.py  pnl.py  price_snapshot.py
backend/app/services/: __init__.py  auth_service.py  earnings_service.py  file_service.py  pnl_service.py  price_service.py
backend/tests/: README.md  conftest.py  test_earnings.py  test_folders.py  test_guidance.py  test_integration.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: attachments.ts  auth.ts  client.ts  earnings.ts  folders.ts  guidance.ts  ideas.ts  index.ts  notes.ts  prices.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: FoldersPage.tsx  (+7 more)
(+19 files in other folders)
